# Mutual-Funds-Analyser

./: .env.example  .gitignore  README.md  pyproject.toml
src/mfanalyser/: crew.py  main.py
src/mfanalyser/config/: agents.yaml  tasks.yaml
src/mfanalyser/tools/: LatestMFSearchTool.py
